force-app/main/default/objects/Account/fields/braseg_agencia__c.field-meta.xml
<CustomField>
    <fullName>braseg_agencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agencia</label>
    <length>4</length>
    <type>Text</type>
</CustomField>