force-app/main/default/objects/Account/fields/braseg_Agencia_ref__c.field-meta.xml
<CustomField>
    <fullName>braseg_Agencia_ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agência</label>
    <referenceTo>Agencia__c</referenceTo>
    <relationshipLabel>Funcionários</relationshipLabel>
    <relationshipName>Funcionarios</relationshipName>
    <type>Lookup</type>
</CustomField>