force-app/main/default/objects/Account/fields/braseg_Auto_Funcionario__c.field-meta.xml
<CustomField>
    <fullName>braseg_Auto_Funcionario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Funcionário</label>
    <type>Checkbox</type>
</CustomField>