force-app/main/default/objects/Account/fields/braseg_Bairro__c.field-meta.xml
<CustomField>
    <fullName>braseg_Bairro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>