force-app/main/default/objects/Account/fields/braseg_canal_preferencia__c.field-meta.xml
<CustomField>
    <fullName>braseg_canal_preferencia__c</fullName>
    <label>Canal Preferencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>AUTO ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>CAIXA</fullName>
            </value>
            <value>
                <fullName>FONE FACIL</fullName>
            </value>
            <value>
                <fullName>INTERNET BANKING</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
            <value>
                <fullName>SEM INFORMACAO</fullName>
            </value>
            <value>
                <fullName>EXPRESSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>