force-app/main/default/objects/Account/fields/braseg_Cargo__c.field-meta.xml
<CustomField>
    <fullName>braseg_Cargo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cargo do Funcionário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>