force-app/main/default/objects/Account/fields/braseg_cartao__c.field-meta.xml
<CustomField>
    <fullName>braseg_cartao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartão</label>
    <type>Checkbox</type>
</CustomField>