force-app/main/default/objects/Account/fields/braseg_cd_cnae__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_cnae__c</fullName>
    <label>Código da Atividade</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>