force-app/main/default/objects/Account/fields/braseg_cd_diretoria_regional__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_diretoria_regional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código da Diretoria Regional</label>
    <length>100</length>
    <type>Text</type>
</CustomField>