force-app/main/default/objects/Account/fields/braseg_cd_natureza_juridica__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_natureza_juridica__c</fullName>
    <label>Codigo Natureza Juridica</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>