force-app/main/default/objects/Account/fields/braseg_Celular_Corporativo__c.field-meta.xml
<CustomField>
    <fullName>braseg_Celular_Corporativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Celular Corporativo</label>
    <type>Phone</type>
</CustomField>