force-app/main/default/objects/Account/fields/braseg_Codigo_funcional_cliente__c.field-meta.xml
<CustomField>
    <fullName>braseg_Codigo_funcional_cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Funcional do Cliente</label>
    <length>7</length>
    <type>Text</type>
</CustomField>