force-app/main/default/objects/Account/fields/braseg_complemento__c.field-meta.xml
<CustomField>
    <fullName>braseg_complemento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>