force-app/main/default/objects/Account/fields/braseg_conta__c.field-meta.xml
<CustomField>
    <fullName>braseg_conta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conta Principal</label>
    <length>7</length>
    <type>Text</type>
</CustomField>