force-app/main/default/objects/Account/fields/braseg_conta_tipo_registro__c.field-meta.xml
<CustomField>
    <fullName>braseg_conta_tipo_registro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Registro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>