force-app/main/default/objects/Account/fields/BRASEG_ContaBloqueada__c.field-meta.xml
<CustomField>
    <fullName>BRASEG_ContaBloqueada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conta Bloqueada</label>
    <type>Checkbox</type>
</CustomField>