force-app/main/default/objects/Account/fields/braseg_cpf_cnpj__c.field-meta.xml
<CustomField>
    <fullName>braseg_cpf_cnpj__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CPF CNPJ</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>