force-app/main/default/objects/Account/fields/braseg_cpf_cnpj_corretor__c.field-meta.xml
<CustomField>
    <fullName>braseg_cpf_cnpj_corretor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CPF/CNPJ Corretor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>