force-app/main/default/objects/Account/fields/braseg_cpf_cnpj_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>braseg_cpf_cnpj_do_cliente__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;PersonAccount&apos;, 
				LEFT(braseg_cpf_cnpj__c, 3),   LEFT(braseg_cpf_cnpj__c, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF CNPJ do Cliente</label>
    <type>Text</type>
</CustomField>