force-app/main/default/objects/Account/fields/braseg_desc_natureza_juridica__c.field-meta.xml
<CustomField>
    <fullName>braseg_desc_natureza_juridica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrição Natureza Jurídica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>