force-app/main/default/objects/Account/fields/braseg_descricao_cnae__c.field-meta.xml
<CustomField>
    <fullName>braseg_descricao_cnae__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrição Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>