force-app/main/default/objects/Account/fields/braseg_diretor_regional__c.field-meta.xml
<CustomField>
    <fullName>braseg_diretor_regional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Diretor da Agência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>