force-app/main/default/objects/Account/fields/braseg_ds_origem__c.field-meta.xml
<CustomField>
    <fullName>braseg_ds_origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>