force-app/main/default/objects/Account/fields/braseg_dt_atualizacao_insc_estadual__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_atualizacao_insc_estadual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Atualização Inscrição Estadual</label>
    <type>Date</type>
</CustomField>