force-app/main/default/objects/Account/fields/braseg_dt_fundacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_fundacao__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Fundação</label>
    <type>Date</type>
</CustomField>