force-app/main/default/objects/Account/fields/braseg_Endereco__c.field-meta.xml
<CustomField>
    <fullName>braseg_Endereco__c</fullName>
    <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(BillingCountry )) ) , BillingCountry &amp; br(), &quot;&quot; ) &amp;
if(ISBLANK(BillingStreet), &quot;&quot; , BillingStreet &amp; &quot;, &quot;) &amp;
if(ISBLANK(braseg_numero_logradouro__c), &quot;&quot; , braseg_numero_logradouro__c &amp; &quot;, &quot;) &amp;
if(ISBLANK(braseg_complemento__c), &quot;&quot; , braseg_complemento__c &amp; &quot;, &quot;) &amp;
if(ISBLANK(braseg_Bairro__c), &quot;&quot; , braseg_Bairro__c &amp; br()) &amp;
if(ISBLANK(BillingCity), &quot;&quot; , BillingCity&amp; &quot;, &quot;)&amp;
if(ISBLANK(BillingState), &quot;&quot; , BillingState&amp; &quot; &quot;)&amp;
if(ISBLANK(BillingPostalCode), &quot;&quot; , BillingPostalCode &amp; br()) &amp;
if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(BillingCountry) ) , &quot;&quot; , BillingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>