force-app/main/default/objects/Account/fields/braseg_estagio_relacionamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_estagio_relacionamento__c</fullName>
    <label>Estagio Relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>Ativacao</fullName>
            </value>
            <value>
                <fullName>Reconquista</fullName>
            </value>
            <value>
                <fullName>Rentabilizacao</fullName>
            </value>
            <value>
                <fullName>Retencao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>