force-app/main/default/objects/Account/fields/braseg_faixa_faturamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_faixa_faturamento__c</fullName>
    <label>Faixa Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>Acima de 250 mm</fullName>
            </value>
            <value>
                <fullName>Até R$ 60 Mil</fullName>
            </value>
            <value>
                <fullName>De 15 mm até 30 mm</fullName>
            </value>
            <value>
                <fullName>De 150 mm até 250 mm</fullName>
            </value>
            <value>
                <fullName>De 240 mil até 360 mil</fullName>
            </value>
            <value>
                <fullName>De 3,6 mm até 15 mm</fullName>
            </value>
            <value>
                <fullName>De 30 mm até 50 mm</fullName>
            </value>
            <value>
                <fullName>De 360 mil até 3,6 mm</fullName>
            </value>
            <value>
                <fullName>De 50 mm até 150 mm</fullName>
            </value>
            <value>
                <fullName>De 60 mil até 240 mil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>