force-app/main/default/objects/Account/fields/braseg_faixa_renda__c.field-meta.xml
<CustomField>
    <fullName>braseg_faixa_renda__c</fullName>
    <label>Faixa de Renda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>De R$ 0,01 a R$ 499,99</fullName>
            </value>
            <value>
                <fullName>De R$ 500 a R$ 999,99</fullName>
            </value>
            <value>
                <fullName>De R$ 1.000,00 a R$ 1.500,00</fullName>
            </value>
            <value>
                <fullName>De R$ 1.500,00 a R$ 2.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 2.000,00 a R$ 2.500,00</fullName>
            </value>
            <value>
                <fullName>De R$ 2.500,00 a R$ 3.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 3.000,00 a R$ 4.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 4.000,00 a R$ 5.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 5.000,00 a R$ 6.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 6.000,00 a R$ 7.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 7.000,00 a R$ 8.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 8.000,00 a R$ 9.000,00</fullName>
            </value>
            <value>
                <fullName>De R$ 9.000,00 a R$ 10.000,00</fullName>
            </value>
            <value>
                <fullName>Mais de R$ 10.000,00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>