force-app/main/default/objects/Account/fields/braseg_fl_001__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_001__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agencia 001</label>
    <type>Checkbox</type>
</CustomField>