force-app/main/default/objects/Account/fields/braseg_fl_campanha_sf__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_campanha_sf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Campanha SF</label>
    <type>Checkbox</type>
</CustomField>