force-app/main/default/objects/Account/fields/braseg_fl_digital__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Digital</label>
    <type>Checkbox</type>
</CustomField>