force-app/main/default/objects/Account/fields/braseg_fl_financiamento_finalizado__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_financiamento_finalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financiamento Finalizado</label>
    <type>Checkbox</type>
</CustomField>