force-app/main/default/objects/Account/fields/braseg_fl_nao_perturbe__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_nao_perturbe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Não perturbe</label>
    <type>Checkbox</type>
</CustomField>