force-app/main/default/objects/Account/fields/braseg_fl_primeiro_banco__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_primeiro_banco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeiro Banco</label>
    <type>Checkbox</type>
</CustomField>