force-app/main/default/objects/Account/fields/braseg_fl_prod_bsd__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_bsd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bsd</label>
    <type>Checkbox</type>
</CustomField>