force-app/main/default/objects/Account/fields/braseg_fl_prod_capi_func__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_capi_func__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capi Func</label>
    <type>Checkbox</type>
</CustomField>