force-app/main/default/objects/Account/fields/braseg_fl_prod_correntista_ativo__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_correntista_ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correntista Ativo</label>
    <type>Checkbox</type>
</CustomField>