force-app/main/default/objects/Account/fields/braseg_fl_prod_dental_individual__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_dental_individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental PF</label>
    <type>Checkbox</type>
</CustomField>