force-app/main/default/objects/Account/fields/braseg_fl_prod_dental_spg__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_dental_spg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental Spg</label>
    <type>Checkbox</type>
</CustomField>