force-app/main/default/objects/Account/fields/braseg_fl_prod_flag_cotitular__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_flag_cotitular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Cotitular</label>
    <type>Checkbox</type>
</CustomField>