force-app/main/default/objects/Account/fields/braseg_fl_prod_flag_poupancista__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_flag_poupancista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Poupancista</label>
    <type>Checkbox</type>
</CustomField>