force-app/main/default/objects/Account/fields/braseg_fl_prod_flag_top_tier__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_flag_top_tier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Top Tier</label>
    <type>Checkbox</type>
</CustomField>