force-app/main/default/objects/Account/fields/braseg_fl_prod_prestamista_analise__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_prestamista_analise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestamista Analise</label>
    <type>Checkbox</type>
</CustomField>