force-app/main/default/objects/Account/fields/braseg_fl_prod_primeira_protecao__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_primeira_protecao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeira Proteção</label>
    <type>Checkbox</type>
</CustomField>