force-app/main/default/objects/Account/fields/braseg_fl_prod_re__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ramos Elementares</label>
    <type>Checkbox</type>
</CustomField>