force-app/main/default/objects/Account/fields/braseg_fl_prod_seguro_viagem__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_seguro_viagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguro Viagem</label>
    <type>Checkbox</type>
</CustomField>