force-app/main/default/objects/Account/fields/braseg_fl_prod_vida_grupo_j__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_prod_vida_grupo_j__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vida Grupo</label>
    <type>Checkbox</type>
</CustomField>