force-app/main/default/objects/Account/fields/braseg_fl_saude_emp__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_saude_emp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saude Empresarial</label>
    <type>Checkbox</type>
</CustomField>