force-app/main/default/objects/Account/fields/braseg_fl_sf_engajado__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_sf_engajado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engajado SF</label>
    <type>Checkbox</type>
</CustomField>