force-app/main/default/objects/Account/fields/braseg_fl_swiss_re__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_swiss_re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Swiss RE</label>
    <type>Checkbox</type>
</CustomField>