force-app/main/default/objects/Account/fields/braseg_fl_vida_demais__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_vida_demais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vida Demais</label>
    <type>Checkbox</type>
</CustomField>