force-app/main/default/objects/Account/fields/braseg_fl_vida_real__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_vida_real__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vida Real</label>
    <type>Checkbox</type>
</CustomField>