force-app/main/default/objects/Account/fields/braseg_fx_beneficio__c.field-meta.xml
<CustomField>
    <fullName>braseg_fx_beneficio__c</fullName>
    <label>Faixa de Benefício</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>ACIMA 10  SALARIO</fullName>
            </value>
            <value>
                <fullName>ATE 2 SALARIO</fullName>
            </value>
            <value>
                <fullName>ENTRE 3 E 5 SALARIO</fullName>
            </value>
            <value>
                <fullName>ENTRE 5.1 E 10 SALARIO</fullName>
            </value>
            <value>
                <fullName>NAO BENEFICIARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>