force-app/main/default/objects/Account/fields/braseg_fx_funcionarios__c.field-meta.xml
<CustomField>
    <fullName>braseg_fx_funcionarios__c</fullName>
    <label>Faixa de Funcionarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>Acima de 1000</fullName>
            </value>
            <value>
                <fullName>De 1 a 5</fullName>
            </value>
            <value>
                <fullName>De 101 a 200</fullName>
            </value>
            <value>
                <fullName>De 11 a 20</fullName>
            </value>
            <value>
                <fullName>De 201 a 300</fullName>
            </value>
            <value>
                <fullName>De 21 a 50</fullName>
            </value>
            <value>
                <fullName>De 301 a 400</fullName>
            </value>
            <value>
                <fullName>De 401 a 500</fullName>
            </value>
            <value>
                <fullName>De 501 a 1000</fullName>
            </value>
            <value>
                <fullName>De 51 a 100</fullName>
            </value>
            <value>
                <fullName>De 6 a 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>