force-app/main/default/objects/Account/fields/braseg_fx_idade__c.field-meta.xml
<CustomField>
    <fullName>braseg_fx_idade__c</fullName>
    <label>Faixa de Idade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>00 - NAO INFORMADO</fullName>
            </value>
            <value>
                <fullName>01 - MENOS DE 18 ANOS</fullName>
            </value>
            <value>
                <fullName>02 - ENTRE 18 E 25</fullName>
            </value>
            <value>
                <fullName>03 - ENTRE 26 E 35</fullName>
            </value>
            <value>
                <fullName>04 - ENTRE 36 E 45</fullName>
            </value>
            <value>
                <fullName>05 - ENTRE 46 E 55</fullName>
            </value>
            <value>
                <fullName>06 - ENTRE 56 E 65</fullName>
            </value>
            <value>
                <fullName>07 - ENTRE 66 E 75</fullName>
            </value>
            <value>
                <fullName>MAIS DE 75 ANOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>