force-app/main/default/objects/Account/fields/braseg_fx_relacionamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_fx_relacionamento__c</fullName>
    <label>Faixa de Relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>00 - ATE 2 ANOS</fullName>
            </value>
            <value>
                <fullName>01 - ENTRE 3 E 5</fullName>
            </value>
            <value>
                <fullName>02 - ENTRE 6 E 15</fullName>
            </value>
            <value>
                <fullName>03 - MAIS DE 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>