force-app/main/default/objects/Account/fields/braseg_fx_rentabilidade__c.field-meta.xml
<CustomField>
    <fullName>braseg_fx_rentabilidade__c</fullName>
    <label>Faixa de Rentabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>00 - MENOR QUE -50</fullName>
            </value>
            <value>
                <fullName>01 - ENTRE -50.01 E -0,01</fullName>
            </value>
            <value>
                <fullName>01.1 - IGUAL A 0</fullName>
            </value>
            <value>
                <fullName>02 - ENTRE 0,01 E 20</fullName>
            </value>
            <value>
                <fullName>03 - ENTRE 20,01 E 40</fullName>
            </value>
            <value>
                <fullName>04 - ENTRE 40,01 E 60</fullName>
            </value>
            <value>
                <fullName>05 - ENTRE 60,01 E 80</fullName>
            </value>
            <value>
                <fullName>06 - ENTRE 80,01 E 100</fullName>
            </value>
            <value>
                <fullName>07 - ENTRE 100,01 E 300</fullName>
            </value>
            <value>
                <fullName>08 - ENTRE 300,01 E 500</fullName>
            </value>
            <value>
                <fullName>09 - ENTRE 500,01 E 1000</fullName>
            </value>
            <value>
                <fullName>10 - ENTRE 1000,01 E 2000</fullName>
            </value>
            <value>
                <fullName>11 - MAIOR QUE 2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>