force-app/main/default/objects/Account/fields/braseg_GEmissor__c.field-meta.xml
<CustomField>
    <fullName>braseg_GEmissor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Funcional do gerente comercial</label>
    <length>7</length>
    <type>Text</type>
</CustomField>