force-app/main/default/objects/Account/fields/BRASEG_GerenteComercial__c.field-meta.xml
<CustomField>
    <fullName>BRASEG_GerenteComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gerente Comercial da Conta</description>
    <label>Gerente Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>