force-app/main/default/objects/Account/fields/braseg_grau_rest__c.field-meta.xml
<CustomField>
    <fullName>braseg_grau_rest__c</fullName>
    <label>Grau Rest</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>