force-app/main/default/objects/Account/fields/braseg_id_conta_pai__c.field-meta.xml
<CustomField>
    <fullName>braseg_id_conta_pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID da Conta Pai</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dependentes</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>