force-app/main/default/objects/Account/fields/braseg_inscricao_estadual__c.field-meta.xml
<CustomField>
    <fullName>braseg_inscricao_estadual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inscrição Estadual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>